style.css
body
{
    background-color: rgb(43, 41, 96);
    font-family: 'Times New Roman', Times, serif;
    font-size: small;
    padding: 20px;
}
.list{
    margin-bottom: 20px ;
    border:2px solid black;
    border-radius: 30px;
    padding: 10px;
    list-style: none;
}
button,input{
    padding: 5px;
    border-radius: 10px;
    margin: 5px;
}
form div{
    display: flex;
    align-items: center;
    gap: 10px;
}
button{
    background-color: #42b830;
    color: #c64951;
    cursor: pointer;
}

